<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#243c45"
    android:padding="@dimen/form_padding" >

    <EditText android:id="@+id/edittext_firstname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:hint="@string/label_first_name" />
    
    <EditText android:id="@+id/edittext_lastname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:layout_below="@id/edittext_firstname"
        android:hint="@string/label_last_name" />
    
    <EditText android:id="@+id/edittext_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@id/edittext_lastname"
        android:hint="@string/label_email" />
    
    <EditText android:id="@+id/edittext_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/edittext_email"
        android:hint="@string/label_password" />
    
    <EditText android:id="@+id/edittext_confirmed_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_below="@id/edittext_password"
        android:hint="@string/label_confirm_password" />
    
    <Button
        android:id="@+id/button_inner_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edittext_confirmed_password"
        android:padding="@dimen/form_padding"
        android:text="@string/label_register" />

</RelativeLayout>