<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/activity_weblogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <!-- The title of the login form -->

        <TextView
            android:id="@+id/webLoginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/webLoginTitle"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <!-- The message to appear under the title -->

        <TextView
            android:id="@+id/webLoginMsgDefault"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/webLoginTitle"
            android:layout_centerHorizontal="true"
            android:text="@string/webLoginMsgDefault"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- The username and password labels and text fields -->

        <RelativeLayout
            android:id="@+id/usernameAndPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/webLoginMsgDefault"
            android:orientation="horizontal"
            android:padding="15dp" >

            <!-- Username label -->


            <!-- Username text field -->


            <!-- Password label -->


            <!-- Password text field -->

        </RelativeLayout>

        <!-- Cyrano login -->
        <Button
            android:id="@+id/button_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameAndPassword"
            android:padding="@dimen/form_padding"
            android:text="@string/label_login"
            android:layout_centerHorizontal="true" />
        
        <!-- Cyrano registration -->
        <Button
            android:id="@+id/button_register"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/button_login"
            android:padding="@dimen/form_padding"
            android:text="@string/label_register"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp" />
        
        <!-- Login with Facebook button -->
        <com.facebook.widget.LoginButton
            android:id="@+id/fbAuthButton"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/button_register"
            android:layout_centerHorizontal="true" />

        <!-- Register button -->


        <!-- Remove or comment before pushing -->

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/splashLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#243c45"
        android:orientation="vertical"
        android:visibility="gone" >

        <include
            android:id="@+id/include1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            layout="@layout/splash_screen" />
    </LinearLayout>

</RelativeLayout>